--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <div class="wrapper">
       <main>
         <section class="section">
-          <h1>Общая информация</h1>
-          <h3>
+          <h1>
             Табло для ведения счета в различных дисциплинах и вариантах игры в
             Снукер. В том числе для режимов с лимитами времени на удар, фрейм
             или матч
-          </h3>
+          </h1>
           <div class="img__container">
-            <img src="assets/panel.jpg" /> <img src="assets/pult1.jpg" />
+            <img src="assets/panel.jpg" class="panel" />
+            <img src="assets/pult1.jpg" class="pult" />
           </div>
+
           <div class="card__container">
             <div class="card">
               <p>
@@ -66,22 +67,22 @@
           </div>
         </section>
         <section class="section">
-          <h3>
+          <h2>
             Любой пульт может быть привязан к конкретному табло, что позволяет
-            работать с несколькими табло в одном зале.
-          </h3>
+            работать с несколькими табло в одном зале
+          </h2>
           <div class="card__container">
             <div class="card">
               <p>
                 Устройство работает от внешнего блока питания 12 вольт и
-                абсолютно безопасно.
+                абсолютно безопасно
               </p>
             </div>
             <div class="card">Картинка БП</div>
             <div class="card">
               <p>
                 Табло можно подключать к своей WiFi сети, и устанавливать имена
-                игроков, лимиты игры и настройки сети через веб-интерфейс.
+                игроков, лимиты игры и настройки сети через веб-интерфейс
               </p>
             </div>
             <div class="card" style="grid-column: 1 / 3">
@@ -91,7 +92,19 @@
                 актуальным счетом. Смотрите раздел “сетевые функции”
               </p>
             </div>
+            <div class="card">
+              <p>
+                Любой пульт может быть привязан к конкретному табло, что
+                позволяет работать с несколькими табло в одном зале
+              </p>
+            </div>
           </div>
+          <div class="img__container">
+            <img src="assets/OBS.png" class="obs" />
+          </div>
+        </section>
+        <section class="section">
+          <h2>Подключение</h2>
         </section>
       </main>
       <footer>
