add connection section and pult section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,44 @@
         </section>
         <section class="section">
           <h2>Подключение</h2>
+          <div class="stepper__container">
+            <div class="circle">1</div>
+            <p>Найдите разъем питания с задней стороны</p>
+            <div class="vertical"><div class="line"></div></div>
+            <div class="circle">2</div>
+            <p>
+              Вставьте в разъем штекер блока питания ( в комплекте ), а сам блок
+              питания включите в розетку 128-220 вольт
+            </p>
+            <div class="vertical"><div class="line"></div></div>
+            <div class="circle">3</div>
+            <p>Табло включится и готово к работе</p>
+          </div>
+          <h3>Управляется с пульта</h3>
+        </section>
+        <section class="section">
+          <h2>Пульт управления</h2>
+          <!-- <p>
+            ИК пульт, питание - две батарейки АА ( в комплекте )
+          </p> -->
+          <div class="pult__container">
+            <div class="pult__block">
+              <p>
+                Ваш пульт управления уже привязан именно к вашему табло и не
+                повлияет на работу других табло нашего производства
+              </p>
+              <img src="assets/pult1.jpg" />
+            </div>
+            <div class="pult__block">
+              <img src="assets/pult2.jpg" />
+              <p>
+                Однако, если вы потеряете пульт, или он придёт в негодность, вы
+                всегда можете написать нам в поддержку, и мы пришлем вам другой
+                пульт
+              </p>
+            </div>
+            <div><p>Цифровые кнопки добавляют очки активному игроку</p></div>
+          </div>
         </section>
       </main>
       <footer>
