upd pult section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             или матч
           </h1>
           <div class="img__container">
-            <img src="assets/panel.jpg" class="panel" />
-            <img src="assets/pult1.jpg" class="pult" />
+            <img src="assets/panel.jpg" class="panel" alt="panel" />
+            <img src="assets/pult1.jpg" class="pult" alt="pult" />
           </div>
 
           <div class="card__container">
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="img__container">
-            <img src="assets/OBS.png" class="obs" />
+            <img src="assets/OBS.png" class="obs" alt="obs" />
           </div>
         </section>
         <section class="section">
@@ -122,26 +122,51 @@
         </section>
         <section class="section">
           <h2>Пульт управления</h2>
-          <!-- <p>
-            ИК пульт, питание - две батарейки АА ( в комплекте )
-          </p> -->
           <div class="pult__container">
             <div class="pult__block">
-              <p>
-                Ваш пульт управления уже привязан именно к вашему табло и не
-                повлияет на работу других табло нашего производства
-              </p>
-              <img src="assets/pult1.jpg" />
+              <div class="pult__block__container">
+                <p>
+                  Ваш пульт управления уже привязан именно к вашему табло и не
+                  повлияет на работу других табло нашего производства
+                </p>
+                <img src="assets/pult1.jpg" alt="pult" />
+              </div>
             </div>
             <div class="pult__block">
-              <img src="assets/pult2.jpg" />
+              <div class="pult__block__container">
+                <img src="assets/pult2.jpg" alt="pult" />
+                <p>
+                  Однако, если вы потеряете пульт, или он придёт в негодность,
+                  вы всегда можете написать нам в поддержку, и мы пришлем вам
+                  другой пульт
+                </p>
+              </div>
+            </div>
+            <div class="pult__block">
+              <div class="pult__block__container">
+                <img src="assets/pult3.jpg" alt="pult" />
+                <p>Цифровые кнопки добавляют очки активному игроку</p>
+              </div>
+            </div>
+            <div class="pult__control">
+              <p><b>ESC</b> - Короткое - отменит последнюю команду.</p>
+              <p><b>Длинное</b> нажатие обнулит табло</p>
+              <p><b>ST</b> - включение таймера на удар</p>
+              <p><b>><</b>- переход хода</p>
               <p>
-                Однако, если вы потеряете пульт, или он придёт в негодность, вы
-                всегда можете написать нам в поддержку, и мы пришлем вам другой
-                пульт
+                <b>FT - Длинное нажатие</b> переключает по кругу режимы табло (
+                классика, Шутаут, 900 )
               </p>
             </div>
-            <div><p>Цифровые кнопки добавляют очки активному игроку</p></div>
+          </div>
+        </section>
+        <section class="section">
+          <h2>Режим игры</h2>
+          <div class="mode">
+            <div>
+              <p>Классический снукер</p>
+              <img src="" alt="mode-snooker" />
+            </div>
           </div>
         </section>
       </main>
