--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <div class="mode">
             <div>
               <p>Классический снукер</p>
-              <img src="/assets/mode-snooker.jpg" alt="mode-snooker" />
+              <img src="/assets/mode_snooker.jpg" alt="mode-snooker" />
               <p>1- счет по фреймам</p>
               <p>2- текущий брейк</p>
               <p>3 - счет в партии</p>
@@ -186,7 +186,7 @@
             </div>
             <div>
               <p>Шут-Аут</p>
-              <img src="/assets/mode-shoot-out.jpg" alt="mode-shoot-out" />
+              <img src="/assets/mode_shoot_out.jpg" alt="mode-shoot-out" />
               <p>1- счет по фреймам</p>
               <p>2- текущий брейк</p>
               <p>3 - счет в партии</p>
@@ -194,7 +194,7 @@
             </div>
             <div>
               <p>Снукер-900</p>
-              <img src="/assets/mode-snooker-900.jpg" alt="mode-snooker-900" />
+              <img src="/assets/mode_snooker_900.jpg" alt="mode-snooker-900" />
               <p>1- счет по фреймам</p>
               <p>2- текущий брейк</p>
               <p>3 - счет в партии</p>
@@ -202,7 +202,7 @@
             </div>
             <div class="mode-function__container">
               <p>Функциональный режим</p>
-              <img src="/assets/mode-function.jpg" alt="mode-function" />
+              <img src="/assets/mode_function.jpg" alt="mode-function" />
               <p>
                 <b>FT</b> - Короткое нажатие включает ФУНКЦИОНАЛЬНЫЙ РЕЖИМ. Это
                 для счета по фреймам, звук вкл/выкл и тп.
