--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="wrapper">
-      <header class="header">
+      <!-- <header class="header">
         <nav class="menu">
           <ul>
             <li><a href="#main">Основная информация</a></li>
@@ -21,47 +21,79 @@
             <li><a href="#examples">Примеры использования</a></li>
           </ul>
         </nav>
-      </header>
+      </header> -->
     </div>
     <main>
       <section class="section">
-        <div class="wrapper">
-          <div class="gallery">
-            <div class="img">
-              <img src="/assets/pult1.jpg" alt="type" />
-              <span class="img__text">text</span>
-            </div>
+        <div class="gallery">
+          <div class="img">
+            <img src="/assets/billiard.jpg" alt="type" />
+            <span class="img__text">Бильярд</span>
+          </div>
+          <div class="img">
+            <img src="/assets/darts.jpg" alt="type" />
+            <span class="img__text">Дартс</span>
+          </div>
+          <div class="img">
+            <img src="/assets/tennis.jpg" alt="type" />
+            <span class="img__text">Теннис</span>
+          </div>
+          <div class="gallery__prev gallery__button">
+            <img src="assets/chevron_left.svg" />
+          </div>
+          <div class="gallery__next gallery__button">
+            <img src="assets/chevron_right.svg" />
           </div>
         </div>
       </section>
       <section class="section" id="main">
-        <div class="wrapper">
-          <h1>
-            Табло для ведения счета в различных дисциплинах и вариантах игры в
-            Снукер. В том числе для режимов с лимитами времени на удар, фрейм
-            или матч
-          </h1>
-          <div class="main__slides__container">
-            <div class="main__slide">
-              <img src="assets/zagluska.svg" />
-              <p>Честная цена от производителя</p>
-            </div>
-            <div class="main__slide">
-              <img src="assets/zagluska.svg" />
-              <p>Без наценки за бренд</p>
-            </div>
+        <h1>
+          В четыре раза дешевле Apple <br />
+          и с кучей уникальных фишек
+        </h1>
+        <div class="main__slides__container">
+          <div class="main__slide">
+            <img src="assets/Rubl.svg" />
+            <p>Питание 12V</p>
           </div>
-          <div class="img__container">
-            <div>
-              <img src="assets/panel.jpg" class="main__img" alt="panel" />
-              <p>caseguru L</p>
-            </div>
-            <div>
-              <img src="assets/pult1.jpg" class="main__img" alt="pult" />
-              <p>caseguru L</p>
-            </div>
+          <div class="main__slide">
+            <img src="assets/hnd1.svg" />
+            <p>WI-FI функция для трансляции</p>
           </div>
         </div>
+        <div class="main__img__container">
+          <div class="product__card">
+            <img src="assets/tablo_with_pult.png" class="main__img" alt="panel" />
+            <p>Снукер</p>
+            <div class="main__color__container">
+              <div class="main__color__button"><div class="color" style="background-color: white;"></div></div>
+              <div class="main__color__button"><div class="color" style="background-color: black;"></div></div>
+              <div class="main__color__button"><div class="color" style="background-color: #67310F;"></div></div>
+            </div>
+            <button class="main__info__button">Подробнее</button>
+          </div>
+          <div class="product__card">
+            <img src="assets/tablo_with_pult.png" class="main__img" alt="panel" />
+            <p>Пирамида</p>
+            <div class="main__color__container">
+              <div class="main__color__button"><div class="color" style="background-color: white;"></div></div>
+              <div class="main__color__button"><div class="color" style="background-color: black;"></div></div>
+              <div class="main__color__button"><div class="color" style="background-color: #67310F;"></div></div>
+            </div>
+            <button class="main__info__button">Подробнее</button>
+          </div>
+          <div class="product__card">
+            <img src="assets/tablo_with_pult.png" class="main__img" alt="panel" />
+            <p>Пул</p>
+            <div class="main__color__container">
+              <div class="main__color__button"><div class="color" style="background-color: white;"></div></div>
+              <div class="main__color__button"><div class="color" style="background-color: black;"></div></div>
+              <div class="main__color__button"><div class="color" style="background-color: #67310F;"></div></div>
+            </div>
+            <button class="main__info__button">Подробнее</button>
+          </div>
+        </div>          
+        </div>          
       </section>
       <section class="section banner__background">
         <div class="wrapper banner__container">
@@ -71,31 +103,31 @@
           </div>
           <div class="banner__features__container">
             <div class="banner__feature">
-              <img src="assets/zagluska.svg" />
+              <img src="assets/card.svg" />
               <div>
-                <h3>Оплата на сайте</h3>
-                <p>Jgkfnf yf cfqnt</p>
+                <h3>Оплата на сайте со скидкой</h3>
+                <p>Или при получении. Рассрочка.</p>
               </div>
             </div>
             <div class="banner__feature">
-              <img src="assets/zagluska.svg" />
+              <img src="assets/pig.svg" />
               <div>
-                <h3>Оплата на сайте</h3>
-                <p>Доступная цена</p>
+                <h3>Доступная цена и бонусы</h3>
+                <p>Скидки на второй товар или комплект товаров.</p>
               </div>
             </div>
             <div class="banner__feature">
-              <img src="assets/zagluska.svg" />
+              <img src="assets/garant.svg" />
               <div>
-                <h3>Оплата на сайте</h3>
-                <p>Гарантия</p>
+                <h3>Гарантия 12 месяцев</h3>
+                <p>От производителя.</p>
               </div>
             </div>
             <div class="banner__feature">
-              <img src="assets/zagluska.svg" />
+              <img src="assets/support.svg" />
               <div>
-                <h3>Оплата на сайте</h3>
-                <p>Техническая поддержка</p>
+                <h3>Техническая поддержка</h3>
+                <p>По телефону, в мессенджерах и электронной почте.</p>
               </div>
             </div>
           </div>
